<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reduction_form_prompt"
                    android:gravity="start"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />

                <Spinner
                    android:id="@+id/reduction_form_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/reduction_forms"
                    android:gravity="end"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="start"
                    android:text="@string/row_number_prompt"
                    android:layout_marginEnd="10dp" />

                <Spinner
                    android:id="@+id/row_reduction_row_number_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:entries="@array/number_of_rows_or_columns"
                    android:gravity="end"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/column_number_prompt"
                    android:gravity="start"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />

                <Spinner
                    android:id="@+id/row_reduction_column_number_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:entries="@array/number_of_rows_or_columns"
                    android:gravity="end"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_gravity="center">

            <TableLayout
                android:id="@+id/row_reduction_matrix_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:padding="10dp">

            </TableLayout>

        </HorizontalScrollView>

        <Button
            android:id="@+id/row_reduction_solve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/solve" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/result_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:padding="10dp">

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</ScrollView>